# rack-verified

./: .gitignore  LICENSE  Makefile  README.md  _CoqProject  _CoqProject.deepspec  rack-verified.opam  rack_bridge.ml  rack_cli.ml  rack_sacm_validate.ml  rack_util.ml  test_rack.ml  test_rack_extended.ml  test_rack_prop.ml  todo.md
.github/workflows/: build.yml  deepspec-image.yml  rack-review.yml
agent/: rack_agent.py  rack_driver.py  rack_prompt.txt  rack_review.py  schema.md  test_agent.py  test_driver.py
deepspec/: ConopsITree.v  DeepSpecITree.v  DeepSpecVST.v  Dockerfile  max.c  max.v  verif_max.v
ocaml/: rack_bench.ml  rack_bridge.ml  rack_cli.ml  rack_util.ml
test/: test_rack.ml  test_rack_extended.ml  test_rack_prop.ml
theories/: Bridge.v  CaseStudy.v  Conops.v  ConopsExample.v  Core.v  Delta.v  Diagnostics.v  Dot.v  Entailment.v  EvidenceClass.v  Example.v  Export.v  ExportUtil.v  Graph.v  ITreeBridge.v  Incremental.v  Json.v  Main.v  Notation.v  ProductLine.v  ProofIdentity.v  RACK.v  Reflect.v  Sacm.v  Serialize.v  SignedBlob.v  TopoSort.v  Trace.v  Types.v  VSTBridge.v  ValidatorRegistry.v  WellFormedness.v
